--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
-  "name": "vuejs_vuex_full",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "serve": "vue-cli-service serve"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "axios": "^0.27.2",
-    "moment": "^2.29.4",
-    "vue": "^3.2.37",
-    "vue-router": "^4.1.3",
-    "vuex": "^4.0.2"
-  },
-  "devDependencies": {
-    "@vue/cli-service": "^5.0.8"
-  },
-  "proxy": "http://localhost:4000"
+    "name": "vuejs_vuex_full",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "serve": "vue-cli-service serve",
+        "build": "vue-cli-service build"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "axios": "^0.27.2",
+        "moment": "^2.29.4",
+        "vue": "^3.2.37",
+        "vue-router": "^4.1.3",
+        "vuex": "^4.0.2"
+    },
+    "devDependencies": {
+        "@vue/cli-service": "^5.0.8"
+    },
+    "proxy": "http://localhost:4000"
 }
